--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,10 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/csi-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Plataforma de gestión de trabajo colaborativo - Nexus" />
-    <title>Nexus - Gestión de Proyectos</title>
+    <meta name="description" content="Plataforma de gestión de trabajo colaborativo - CSI Task" />
+    <title>CSI Task - Gestión De Proyectos</title>
   </head>
   <body>
     <div id="root"></div>
